# bl2-ap-mod

./: .gitignore  .gitmodules  Locations.py  __init__.py  fasttravels.py  items.py  pyproject.toml  quests.py  skills.py  vaultsymbols.py
.github/: copilot-instructions.md
